Updated css layout, added a profile photo upload feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <div class="container">
+        <div class="herocontainer">
+            <div class="hero">
+                <div class="card">
+                    <h1>Adventurer</h1>
+                    <img src="/images/default_profile.jpg" id="profilePic">
+                    <label for="inputFile">Upload Profile Image</label>
+                    <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile">
+                </div>
+            </div>
+        </div>
+
         <div class="headerText">TaskRPG</div>
         <input type="text" id="taskInput" placeholder="Enter a task">
         <button id="addTaskBtn">Add Task</button>
