Created basic layout for menu options

--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
         <div class="herocontainer">
             <div class="hero">
                 <div class="card">
-                    <h1>Adventurer</h1>
+                    <div id="gameboy-menu">
+                        <ul id="menu-options">
+                            <li class="menu-option">View Progress</li>
+                            <li class="menu-option">To-Do Tasks</li>
+                            <li class="menu-option">Shop</li>
+                            <li class="menu-option">Settings</li>
+                        </ul>
+                    </div>
+                    <!-- <h1>Adventurer</h1>
                     <img src="/images/default_profile.jpg" id="profilePic">
                     <label for="inputFile">Upload Profile Image</label>
-                    <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile">
+                    <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile"> -->
                 </div>
             </div>
         </div>
