Updated css layout

--- a/index.html
+++ b/index.html
@@ -28,14 +28,26 @@
         </div>
 
         <div class="headerText">TaskRPG</div>
-        <div id="dpad">
-            <button class="dpad-button" id="dpad-up">▲</button>
-            <div class="dpad-middle-row">
-                <button class="dpad-button" id="dpad-left">◀</button>
-                <button class="dpad-button" id="dpad-center">●</button>
-                <button class="dpad-button" id="dpad-right">▶</button>
+        <div class="btnContainer">
+            <div id="dpad">
+                <button class="dpad-button" id="dpad-up">▲</button>
+                <div class="dpad-middle-row">
+                    <button class="dpad-button" id="dpad-left">◀</button>
+                    <button class="dpad-button" id="dpad-center">●</button>
+                    <button class="dpad-button" id="dpad-right">▶</button>
+                </div>
+                <button class="dpad-button" id="dpad-down">▼</button>
             </div>
-            <button class="dpad-button" id="dpad-down">▼</button>
+            <div class="ab">
+                <div class="bContainer">
+                    <button class="bBtn"></button>
+                    <div class="bText">B</div>
+                </div>
+                <div class="aContainer">
+                    <button class="aBtn"></button>
+                    <div class="aText">A</div>
+                </div>
+            </div>
         </div>
 
         <div id="taskContainer" class="hidden">
