Added a menu toggle button, updated css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="herocontainer">
             <div class="hero">
                 <div class="card">
-                    <div id="gameboy-menu">
+                    <div id="gameboy-menu" class="hidden">
                         <div id="menu-options">
                             <button class="menu-option">View Progress</button>
                             <button class="menu-option" id="viewTasksBtn">To-Do Tasks</button>
@@ -48,6 +48,10 @@
                     <div class="aText">A</div>
                 </div>
             </div>
+        </div>
+        <div class="menuContainer">
+            <button class="menuBtn" id="menu-btn"></button>
+            <div class="menuText">MENU</div>
         </div>
 
         <div id="taskContainer" class="hidden">
