Added back the profile photo customization for the 'view progress' menu option

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
                             <button class="menu-option">Settings</button>
                         </div>
                     </div>
-                    <!-- <h1>Adventurer</h1>
-                    <img src="/images/default_profile.jpg" id="profilePic">
-                    <label for="inputFile">Upload Profile Image</label>
-                    <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile"> -->
+                    <div id="progressContainer" class="hidden">
+                        <h1>Adventurer</h1>
+                        <img src="/images/default_profile.jpg" id="profilePic">
+                        <label for="inputFile">Upload Profile Image</label>
+                        <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile">
+                    </div>
                 </div>
             </div>
         </div>
