Add functionality to 'view progress' menu option

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <div class="card">
                     <div id="gameboy-menu" class="hidden">
                         <div id="menu-options">
-                            <button class="menu-option">View Progress</button>
+                            <button id="progressButton" class="menu-option">View Progress</button>
                             <button class="menu-option" id="viewTasksBtn">To-Do Tasks</button>
                             <button class="menu-option">Shop</button>
                             <button class="menu-option">Settings</button>
