Added an EXP point system to award users who complete tasks

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <img src="/images/default_profile.jpg" id="profilePic">
                         <label for="inputFile">Upload Profile Image</label>
                         <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile">
+                        <h2 id="expDisplay">EXP: 0</h2>
                     </div>
                 </div>
             </div>
