Fixed css issues in 'view progress' menu option

--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
                         </div>
                     </div>
                     <div id="progressContainer" class="hidden">
-                        <h1>Adventurer</h1>
-                        <img src="/images/default_profile.jpg" id="profilePic">
-                        <img src="/images/spellun-sprite.png" class="knight">
-                        <label for="inputFile">Upload Profile Image</label>
-                        <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile">
-                        <h2 id="expDisplay">EXP: 0</h2>
+                        <div class="progressContainerItems">
+                            <h1>Adventurer</h1>
+                            <img src="/images/default_profile.jpg" id="profilePic">
+                            <img src="/images/spellun-sprite.png" class="knight">
+                            <label for="inputFile">Upload Profile Image</label>
+                            <input type="file" accept="image/jpeg, image/jpg, image/png" id="inputFile">
+                            <h2 id="expDisplay">EXP: 0</h2>
+                        </div>
                     </div>
                 </div>
             </div>
