Added settings to allow user to change back to default settings, updated css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                             <button id="progressButton" class="menu-option">View Progress</button>
                             <button class="menu-option" id="viewTasksBtn">To-Do Tasks</button>
                             <button class="menu-option" id="shopBtn">Shop</button>
-                            <button class="menu-option">Settings</button>
+                            <button class="menu-option" id="settingsBtn">Settings</button>
                         </div>
                     </div>
                     <div id="progressContainer" class="hidden">
@@ -80,6 +80,22 @@
                         <p>(Cost: 50 EXP)</p>
                         <button class="buyBtn" data-cost="50" data-item="Mountain_Range_Background">Buy</button>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="settingsContainer" class="hidden">
+            <div class="settingsItems">
+                <h2>Settings</h2>
+                <div id="settingsItems">
+                    <div class="settings-item">
+                        <p>Default Background</p>
+                        <button class="buyBtn" data-cost="0" data-item="Default_Background">Select</button>
+                    </div>
+                    <!-- <div class="settings-item">
+                        <p>Mountain Range Background</p>
+                        <button class="buyBtn" data-cost="0" data-item="Mountain_Range_Background">Buy</button>
+                    </div> -->
                 </div>
             </div>
         </div>
