Added credits button in settings, updated css

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
                         <p>Default Background</p>
                         <button class="buyBtn" data-cost="0" data-item="Default_Background">Select</button>
                     </div>
-                    <!-- <div class="settings-item">
-                        <p>Mountain Range Background</p>
-                        <button class="buyBtn" data-cost="0" data-item="Mountain_Range_Background">Buy</button>
-                    </div> -->
+                    <div class="settings-item">
+                        <p>Credits</p>
+                        <button id="creditsBtn">View</button>
+                    </div>
                 </div>
             </div>
         </div>
