Updated shop items, updated credits

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
                         <p>(Cost: 50 EXP)</p>
                         <button class="buyBtn" data-cost="50" data-item="Mountain_Range_Background">Buy</button>
                     </div>
+                    <div class="shop-item">
+                        <p>Grey Forest Background</p>
+                        <p>(Cost: 50 EXP)</p>
+                        <button class="buyBtn" data-cost="50" data-item="Grey_Forest_Background">Buy</button>
+                    </div>
                 </div>
             </div>
         </div>
