Added shop categories toggle buttons

--- a/index.html
+++ b/index.html
@@ -70,20 +70,26 @@
             <div class="shopItems">
                 <h2>Shop</h2>
                 <div id="shopItems">
-                    <div class="shop-item">
-                        <p>City Skyline Background</p>
-                        <p>(Cost: 50 EXP)</p>
-                        <button class="buyBtn" data-cost="50" data-item="City_Skyline_Background">Buy</button>
+                    <div class="shopCategories">
+                        <button id="backgroundsBtn">Backgrounds</button>
+                        <button id="themesBtn">Themes</button>
                     </div>
-                    <div class="shop-item">
-                        <p>Mountain Range Background</p>
-                        <p>(Cost: 50 EXP)</p>
-                        <button class="buyBtn" data-cost="50" data-item="Mountain_Range_Background">Buy</button>
-                    </div>
-                    <div class="shop-item">
-                        <p>Grey Forest Background</p>
-                        <p>(Cost: 50 EXP)</p>
-                        <button class="buyBtn" data-cost="50" data-item="Grey_Forest_Background">Buy</button>
+                    <div id="backgroundsItems" class="hidden">
+                        <div class="shop-item">
+                            <p>City Skyline Background</p>
+                            <p>(Cost: 50 EXP)</p>
+                            <button class="buyBtn" data-cost="50" data-item="City_Skyline_Background">Buy</button>
+                        </div>
+                        <div class="shop-item">
+                            <p>Mountain Range Background</p>
+                            <p>(Cost: 50 EXP)</p>
+                            <button class="buyBtn" data-cost="50" data-item="Mountain_Range_Background">Buy</button>
+                        </div>
+                        <div class="shop-item">
+                            <p>Grey Forest Background</p>
+                            <p>(Cost: 50 EXP)</p>
+                            <button class="buyBtn" data-cost="50" data-item="Grey_Forest_Background">Buy</button>
+                        </div>
                     </div>
                 </div>
             </div>
