Added a new customization theme in the shop

--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
                             <button class="buyBtn" data-cost="50" data-item="Grey_Forest_Background">Buy</button>
                         </div>
                     </div>
+                    <div id="themesItems" class="hidden">
+                        <div class="shop-item">
+                            <p>Sci-Fi Theme</p>
+                            <p>(Cost: 150 EXP)</p>
+                            <button class="buyBtn" data-cost="150" data-item="Sci_Fi_Theme">Buy</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
